# ML-API

./: README.md  api.py  call.ps1  call.py  classifier.pkl  indo_processor.py  koding.ipynb  lib_req.txt  model_KNN.ipynb  model_XGB.ipynb  model_joblib.py  model_predict.py  other.txt  pyproject.toml  test.ps1  vectorizer.pkl
model/: KNN_classifier.pkl  KNN_vectorizer.pkl  XGB_classifier.pkl  XGB_vectorizer.pkl
