[project]
name = "ML-API"
version = "0.1.0"
description = "Machine Learning API for school project"
authors = [
    {name = "YunashÄ",email = "LiterallyDontExist@nowhere.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sastrawi (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sklearn (>=0.0.post12,<0.1)",
    "joblib (>=1.4.2,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
